# Project-ACLG

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: update.yaml
hooks/: pre-commit.sh
source/: configuration.py
source/assets/: styles.css
source/backend/: build_letter.py  form_builder.py  generate_pdf.py  pdf_generator.py
source/data/: body.json  form.json  header.json  manage_data.py  setup.json
source/frontend/: callback.py  callbacks.py  layout.py  modal.py
