[tool.poetry]
name = "project-aclg"
version = "0.1.0"
description = ""
authors = ["lxRbckl <lxrbckl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.17.0"
dash-bootstrap-components = "^1.6.0"
lxrbckl = "^3.2.0"
reportlab = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
